--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.26.1",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
