--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
